--- a/style.css
+++ b/style.css
@@ -52,8 +52,10 @@ nav a:hover {
 
 body {
   /* Основной цвет фона */
-  background-color: rgb(114, 100, 53);
-  width: 85%; 
+ background: rgb(255,211,117);
+background: linear-gradient(0deg, rgba(255,211,117,1) 0%, rgba(255,251,207,1) 100%);
+background-attachment:fixed;
+ width: 85%; 
   margin-left:auto; 
   margin-right:auto;
 
